首页，商品页面，收货地址页面修改
1. 首页样式修改
2. 修复了不能添加商品的问题
3. 收货地址文字说明修改

--- a/miniprogram/pages/supermarket/address/address.wxml
+++ b/miniprogram/pages/supermarket/address/address.wxml
@@ -21,8 +21,8 @@
           <radio-group bindchange="setDefault" class="radio-group">
             <label class="radio">
               <radio checked="{{item.addressId === default_id}}" color="#ff495e" value="{{item.addressId}}"></radio>
-              <text class="cont" wx:if="{{item.addressId === default_id}}">默认</text>
-              <text class="cont" wx:else>设为默认地址</text>
+              <text class="cont" wx:if="{{item.addressId === default_id}}">当前收货地址</text>
+              <text class="cont" wx:else>设为收货地址</text>
             </label>
           </radio-group>
         </view>
