--- a/miniprogram/pages/supermarket/authorize/authorize.wxml
+++ b/miniprogram/pages/supermarket/authorize/authorize.wxml
@@ -5,7 +5,7 @@
   <view class='app-title' style='text-align:center;'>授权登录后开发者将获得以下权限</view>
   <view class='grey-font' style='text-align:center;'><view class='circle-pointer'></view>获得你的公开信息（昵称、头像等）</view>
   <view class="userinfo">
-    <button type='primary' class='autorizeBtn'  open-type="getUserInfo"> 确认授权 </button>
-    <button class='autorizeBtn' bindtap='to_index'> 返回首页 </button>
+    <button type='primary' class='autorizeBtn'  open-type="getUserInfo" bindgetuserinfo="bindGetUserInfo"> 确认授权 </button>
+    <!-- <button class='autorizeBtn' bindtap='to_index'> 返回首页 </button> -->
   </view>
 </view>
