--- a/miniprogram/pages/supermarket/order/order.wxml
+++ b/miniprogram/pages/supermarket/order/order.wxml
@@ -40,7 +40,7 @@
                 <view bindtap="detail" class="order-list-box dis-flex" data-id="{{item.order_id}}">
                   <view class="left">
                     <view class="dis-flex">
-                      <view class="order-shop-left" wx:for="{{item.commodityName}}" wx:key="goods">
+                      <view class="order-shop-left">
                         <image src="{{item.commodityImage}}"></image>
                       </view>
                     </view>
