--- a/miniprogram/pages/supermarket/goods/goods.wxml
+++ b/miniprogram/pages/supermarket/goods/goods.wxml
@@ -1,5 +1,6 @@
 <!--pages/order/order.wxml-->
 <!--head -->
+<view wx:if="{{goods.length}}">
 <view class="header" style="width:100%;height:310rpx;">
   <image src='{{adsrc}}' style="width:100%;height:310rpx;">{{adsrc}}</image>
 </view>
@@ -120,5 +121,11 @@
   </view>
   <view name="fade">
     <view class="list-mask" wx:if="{{listShow}}" bindtap="hideList"></view>
+  </view>
+</view>
+</view>
+<view wx:else>
+  <view class="ectouch-notcont">
+  <text class="cont">亲，目前还没有任何商品哦</text>
   </view>
 </view>
